--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap');
 #maindiv{
 	font-family:Yusei Magic!important;
+     width:80%;	
 }
-.menu-main-div{
 
-}
 .menu-div{
-	margin-right:173px;
+	margin-right: -90px;
 }
 .menu-div ul {
 	float:right;
@@ -23,10 +22,12 @@
 	font-family:"Roboto", sans-serif;	
 }
 .introdiv{
+	width: 1300px;
 	padding-left:100px;
 	padding-bottom:100px;
 	padding-right:100px;
 	display:block;
+	 
 }
 .intro-heading{
 	width:50%;
@@ -68,10 +69,12 @@
 	float:left;	 
 }
 .main-about{
+	width: 100%;
 	padding-left:100px;
 	padding-bottom:100px;
 	padding-right:100px;
 	display:block;
+	float: left;
 }
 .pic-about{
 	width:50%;
@@ -106,9 +109,10 @@
 	  margin-bottom:-8px;
 }
 .divser{
-	 width:100%;
 	 float:left;
-	 margin-left:42%;
+	 width:1000px;
+	 margin-left: 615px;
+	 width: 800px;
 }
 .ser{
 	 text-transform:uppercase;
@@ -117,31 +121,33 @@
 	 font-size:50px;
 }
  .threebox{
-	 width:100%;
-	 display:block;
-	 margin-left:100px;
+	width: 110%;
+    display: block;
+    margin-left: 100px;
+    float: left;
+
  }
  .box1 img{
 	width:55px;
     height:55px; 
  }
 .box1{
-	float:left;
-	background-color:#ff8367;
-	width:335px;
-	height:235px;
-	text-align:center;
-	padding:30px;
-	border-radius:5px;
-	color:#fff;
-	margin-right:20px;
+	float: left;
+    background-color: #ff8367;
+    width: 28%;
+    height: 252px;
+    text-align: center;
+    padding: 25px 20px;
+    border-radius: 5px;
+    color: #fff;
+    margin-right: 20px;
 }
 .box1:hover{
 	border:5px solid #ff8367;
 	background-color:#fff;
 	color:#000;
 	 transition:all .3s ease;
-	padding:25px;
+	padding:20px 15px;
 }
 .latest-div{
 	float:left;
@@ -152,26 +158,24 @@
 .latest-div h1{
 	color:#ff8367;
 	font-family:arial;
-	margin-bottom:60px;
-	margin-top:50px;
 	margin-left:500px;
-	margin-right:400px;
 }
 .latest-div h1 span{
 	color:#363958;
 }
 .shadowbox-maindiv{
 	float:left;
-	margin-left:100px;
+	margin-left:60px;
+	width:110%;
 }
 .shadowbox1{
-	float:left;
-	width:365px;
-	height:370px;
-	box-shadow: 2px 2px 20px 0px #ccc;
-    padding:28px 12px 24px 12px;
-	margin-left:40px;
-	border-radius:30px;
+	float: left;
+    width: 385px;
+    height: 370px;
+    box-shadow: 2px 2px 20px 0px #ccc;
+    padding: 28px 4px 24px 18px;
+    margin-left: 30px;
+    border-radius: 30px;
 }
 .shadowbox1 img{
 	width:360px;
@@ -186,6 +190,7 @@
 .befor{
 	  float:left;
 	  padding-left:30px; 
+	  position:relative;
 }
 .cssimg {
 	background-image:url("images/background.jpg");
@@ -193,7 +198,7 @@
 	background-repeat:no-repeat;
 	background-position:center;
 	float:left;
-	width:1500px;
+	width:1350px;
 	height:300px;
 }
 .befor h2{
@@ -215,12 +220,13 @@
 	text-decoration:none;
 	border-radius:5px;
     position:absolute;	
-    left: 165px;
-    bottom:-1450px;
+	left: 85px;
+    bottom: 115px;
 }
 
 .lastdiv{
 	float:left;
+	margin-left: -75px;
 }
 .lastdiv h5{
 	margin-left:705px;
